@@ -584,3 +584,6 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 
 # Adds the column "view INT NOT NULL DEFAULT 0" to the "directoryChecksums" table
 !com.openexchange.drive.checksum.rdb.DirectoryChecksumsAddViewColumnTask
+
+# Corrects values in the 'changing_date' column that are set to 9223372036854775807
+!com.openexchange.groupware.update.tasks.FolderCorrectChangingDateTask
