@@ -581,3 +581,9 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 
 # Changes the column "data" from table "jsonStorage" from type BLOB (64KB) to MEDIUMBLOB (16MB)
 !com.openexchange.jslob.storage.db.groupware.DBJSlobIncreaseBlobSizeTask
+
+# Adds the column "view INT NOT NULL DEFAULT 0" to the "directoryChecksums" table
+!com.openexchange.drive.checksum.rdb.DirectoryChecksumsAddViewColumnTask
+
+# Corrects values in the 'changing_date' column that are set to 9223372036854775807
+!com.openexchange.groupware.update.tasks.FolderCorrectChangingDateTask
